<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tName"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/eName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:autofillHints="@string/textBasic"
            android:hint="@string/hint"
            android:inputType="textPersonName"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/bClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clicked"
            android:text="@string/buttonText"
            android:textColor="@color/buttonColor" />
    </LinearLayout>

    <TextView
        android:id="@+id/tName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:background="@color/background"
        android:gravity="center_horizontal"
        android:text="@string/textBasic"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/newButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tName"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bShare"
            style="?buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="share"
            android:text="@string/share"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/bSearch"
            style="?buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="search"
            android:text="@string/buttonSearch"
            android:textColor="@color/black" />

    </LinearLayout>

    <Spinner
        android:id="@+id/colorSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newButtons"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:autofillHints="Color" />

    <!--    <Button-->
    <!--        android:id="@+id/bRandom"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:onClick="clicked"-->
    <!--        android:text="@string/random" />-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/search"
        android:onClick="search"
        android:src="@drawable/ic_search"
        tools:ignore="RelativeOverlap" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/share"
        android:onClick="share"
        android:src="@drawable/ic_share" />

</RelativeLayout>